Fix spacing issues

--- a/themes/nica/assets/style/layout/_header.scss
+++ b/themes/nica/assets/style/layout/_header.scss
@@ -9,7 +9,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    font-size: 1.2rem;
+    line-height: 1.2rem;
   }
 
   .navigation-logo {
